--- a/styles.scss
+++ b/styles.scss
@@ -1,20 +1,25 @@
+
 /* General Styles */
 * {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-  }
-  
-  body {
-    background: #f0f0f0 url('images/wallpapersden.com_futuristic-city-nightscape-2k_2563x1436.jpg') no-repeat center fixed;
+}
+
+body {
+    background-color: #f0f0f0;
+    background-image: url('images/wallpapersden.com_futuristic-city-nightscape-2k_2563x1436.jpg');
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     color: #fff;
     height: 100vh;
-    overflow-x: hidden;
-  }
-  
-  .card {
+    overflow-x: hidden; 
+}
+
+.card {
     width: 90%;
     max-width: 470px;
     background: linear-gradient(135deg, rgba(147, 104, 233, 0.8), #5b548a);
@@ -24,24 +29,20 @@
     padding: 40px 35px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .search {
+}
+
+.search {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 20px;
-  }
-  
-  .search input,
-  .search button {
+}
+
+.search input {
+    border: 0;
+    outline: 0;
     background-color: #ebfffc;
-    border: none;
-    outline: none;
-  }
-  
-  .search input {
     color: #555;
     padding: 10px 25px;
     height: 60px;
@@ -49,152 +50,153 @@
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
-  }
-  
-  .search button {
+}
+
+.search button {
+    border: 0;
+    outline: 0;
+    background-color: #ebfffc;
     border-radius: 50%;
     width: 60px;
     height: 60px;
     cursor: pointer;
-  }
-  
-  .search button img {
+}
+
+.search button img {
     width: 20px;
-  }
-  
-  .weather-icon {
+}
+
+.weather-icon {
     width: 170px;
     margin-top: 30px;
-  }
-  
-  .weather {
-    h1 {
-      font-size: 80px;
-      font-weight: 500;
-      margin: 10px 0;
-    }
-  
-    h2 {
-      font-size: 45px;
-      font-weight: 400;
-      margin-top: -10px;
-    }
-  }
-  
-  .details {
+}
+
+.weather h1 {
+    font-size: 80px;
+    font-weight: 500;
+    margin: 10px 0;
+}
+
+.weather h2 {
+    font-size: 45px;
+    font-weight: 400;
+    margin-top: -10px;
+}
+
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 30px;
-  
-    .col {
-      display: flex;
-      align-items: center;
-      text-align: left;
-  
-      img {
-        width: 40px;
-        margin-right: 10px;
-      }
-    }
-  
-    .humidity {
-      font-size: 28px;
-      margin-top: -6px;
-    }
-  }
-  
-  .weather {
-    display: none;
-  }
-  
-  .error {
+}
+
+.col {
+    display: flex;
+    align-items: center;
     text-align: left;
-    margin: 10px 0 0 10px;
-    font-size: 14px;
-    color: #ff0000;
+}
+
+.col img {
+    width: 40px;
+    margin-right: 10px;
+}
+
+.humidity {
+    font-size: 28px;
+    margin-top: -6px;
+}
+
+.weather {
     display: none;
-  }
-  
-  /* Media Queries */
-  
-  /* Tablets and small desktops */
-  @media (max-width: 1024px) {
+}
+
+.error {
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
+    color: #ff0000; 
+}
+
+/* Media Queries */
+
+/* Tablets and small desktops */
+@media (max-width: 1024px) {
     .card {
-      width: 95%;
-      padding: 30px 25px;
+        width: 95%;
+        padding: 30px 25px;
     }
-  
+
     .search input {
-      height: 50px;
-      font-size: 16px;
+        height: 50px;
+        font-size: 16px;
     }
-  
+
     .search button {
-      width: 50px;
-      height: 50px;
+        width: 50px;
+        height: 50px;
     }
-  
+
     .weather h1 {
-      font-size: 60px;
+        font-size: 60px;
     }
-  
+
     .weather h2 {
-      font-size: 35px;
+        font-size: 35px;
     }
-  
+
     .details {
-      flex-direction: column;
-  
-      .col {
+        flex-direction: column;
+    }
+
+    .col {
         margin-bottom: 15px;
-      }
-  
-      .humidity {
+    }
+
+    .humidity {
         font-size: 24px;
-      }
     }
-  }
-  
-  /* Mobile phones */
-  @media (max-width: 768px) {
+}
+
+/* Mobile phones */
+@media (max-width: 768px) {
     .card {
-      width: 100%;
-      padding: 20px 15px;
-      margin: 50px auto 0;
+        width: 100%;
+        padding: 20px 15px;
+        margin: 50px auto 0;
     }
-  
+
     .search {
-      flex-direction: column;
-  
-      input {
-        margin-bottom: 10px;
+        flex-direction: column;
+    }
+
+    .search input {
+        margin: 0 0 10px 0;
         height: 45px;
         font-size: 16px;
-      }
-  
-      button {
+    }
+
+    .search button {
         width: 45px;
         height: 45px;
-      }
     }
-  
+
     .weather h1 {
-      font-size: 50px;
+        font-size: 50px;
     }
-  
+
     .weather h2 {
-      font-size: 30px;
+        font-size: 30px;
     }
-  
+
     .details {
-      padding: 0 10px;
-      margin-top: 20px;
-  
-      .humidity {
-        font-size: 20px;
-      }
+        padding: 0 10px;
+        margin-top: 20px;
     }
-  }
-  
+
+    .humidity {
+        font-size: 20px;
+    }
+} 
